add initial text on JTV's fellowship activities

--- a/planJake.tex
+++ b/planJake.tex
@@ -1,3 +1,35 @@
-\subsection{Leveraging Jake's NSF Fellowship}
+\subsection{Leveraging Current NSF Funding}
 
-What will we do...
+Co-PI Vanderplas is currently supported by a 3-year NSF postdoctoral
+fellowship through the interdisciplinary CI-TraCS program.  Though
+Vanderplas' background is in Astronomy, the sponsoring professor is in
+the Computer Science and Engineering department.  The focus of the
+fellowship is research on the computational side of Astronomy, especially
+on efficient statistical analysis of very large datasets.
+
+A full 20\% of the fellowship time is devoted to teaching and course
+preparation, and as part of this requirement Vanderplas has developed
+and taught a Fall 2013
+graduate seminar course through the Astronomy department:
+Astr 599, {\it Scientific Computing with Python}.  The purpose of the
+course is to offer a comprehensive introduction to scientific computing
+in the Python programming language, geared toward graduate 
+and advanced undergraduate students in Astronomy.
+After stepping through the fundamental tools of scientific computing,
+the course scratches the surface of statistical, machine learning, and
+datamining methods made available through various packages in the scientific
+Python ecosystem. The entirety of
+the curriculum material is made available on the course website\footnote{
+\url{http://www.astro.washington.edu/vanderplas/Astr599/}}.
+In the remaining two years of his fellowship, Vanderplas will expand this
+curriculum and offer the course to a wider audience of students through
+the University's inter-disciplinary eScience Institute.
+
+This curriculum is in many ways a fundamental component of the goals of the
+current proposal.  Practical statistical analysis and data mining 
+requires a certain level of proficiency in a scientific computing platform:
+this course equips students with that foundational knowledge from which they
+can explore the use of data mining and machine learning algorithms within
+their own field.
+
+As the current proposal moves forward, we will...
