added astroML figure

--- a/plan.tex
+++ b/plan.tex
@@ -102,6 +102,28 @@ The course outline:
 \end{enumerate} 
 
 
+We will textbook {\it ``Statistics, Data Mining, and Machine Learning in Astronomy:
+A Practical Python Guide for the Analysis of Survey Data''} (Princeton Series in Modern 
+Observational Astronomy) coauthored by Co-PIs on this prooposal. 
+
+
+\subsection{Python Packages} 
+
+
+
+We will leverage all the publicly available modern python tools. 
+In particular,  seminar work will be built around the {\it astroML} package
+that was developed to support textbook to be used with the proposed course. 
+
+
+\begin{figure*}[!t]
+\vskip -5.5in
+\includegraphics[width=1.02\hsize,clip]{astroML.eps}
+\vskip -2.0in
+\caption{We will leverage all the modern python tools available in {\it astroML} and
+other packages.} 
+\label{Fig:astroML}
+\end{figure*}
 
 
 
