--- a/proposal.tex
+++ b/proposal.tex
@@ -25,6 +25,7 @@
 \newcommand{\mmp}[1]{\textcolor{red}{#1}}
 
 \newcommand{\meila}{Meil\u{a}}
+\newcommand{\cdse}{CDS\&E}
 
 \newcommand{\bit}{\begin{itemize}}
 \newcommand{\eit}{\end{itemize}}
