--- a/proposal.tex
+++ b/proposal.tex
@@ -44,15 +44,17 @@
 \begin{document}
 \vskip -0.4in
 
-\include{introduction}
+\input{introduction}
 
-\include{plan}
-\include{planMarina}
-\include{planJake}
-\include{planAndy}
+\input{plan}
+\input{planMarina}
+\input{planJake}
+\input{planAndy}
 
-\include{organization}
+\input{organization}
 
+\bibliographystyle{plain}
+\bibliography{proposal}
 \end{document} 
 
 
