--- a/plan.tex
+++ b/plan.tex
@@ -109,11 +109,25 @@ Observational Astronomy) coauthored by Co-PIs on this prooposal.
 
 \subsection{Python Packages} 
 
+We will leverage all the publicly available modern python tools. In particular, seminar work will be 
+built around the {\it astroML} package (available from http://www.astroml.org) that was developed 
+to support textbook to be used with the proposed ASTR 598 course. {\it astroML} is a python module 
+for machine learning and data mining built on {\it numpy}, {\it scipy}, {\it scikit-learn}, and {\it matplotlib}, 
+and distributed under the 3-clause BSD license. It contains a growing library of statistical and machine 
+learning routines for analyzing astronomical data in python, loaders for several open astronomical datasets, 
+and a large suite of examples of analyzing and visualizing astronomical datasets (there are close to two 
+hundred examples of machine learning and visualization in the code library that supports the textbook 
+alone).
+
+In addition to  {\it astroML} package, we will expose students to several other popular and widely
+used toolkits: 
 
 
-We will leverage all the publicly available modern python tools. 
-In particular,  seminar work will be built around the {\it astroML} package
-that was developed to support textbook to be used with the proposed course. 
+
+
+
+
+
 
 
 \begin{figure*}[!t]
