--- a/proposal.tex
+++ b/proposal.tex
@@ -17,7 +17,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \font\math = cmmi12
 \newcommand\x         {\hbox{$\times$}}
-\hyphenation{para-met-ri-zed Qua-sars}
+\hyphenation{para-met-ri-zed Qua-sars cross-vali-da-tion}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Commands added by MMP 
 
