marina reorganization: education,dissemination,research,uw replaced planMarina,plan,planAndy

--- a/supplement.tex
+++ b/supplement.tex
@@ -26,7 +26,6 @@
 
 \newcommand{\meila}{Meil\u{a}}
 \newcommand{\cdse}{CDS\&E}
-\newcommand{\astroml}{{\em AstroML}}
 
 \newcommand{\bit}{\begin{itemize}}
 \newcommand{\eit}{\end{itemize}}
@@ -37,39 +36,24 @@
 \newcommand{\benums}{\begin{enumerate*}}
 \newcommand{\eenums}{\end{enumerate*}}
 
+\newcommand{\astroml}{{\em AstroML}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\title{Supplementary Documentation\\ for Our Proposal}
+\author{PI: \meila etc}
 
 
 \begin{document}
 \vskip -0.4in
+\maketitle
 
-\input{introduction}  % the same
-   
-\input{education}     % planMarina.tex, plan.tex
-\input{dissemination} % workshop only
-\input{research}      % nothing
-\input{activities} % what everyone is doing, recruiting, evaluation
-                   % Andy's stuff, some sections from planMarina.tex
+\section{Sample course materials from STAT 391 ...}
 
-\input{uw}         % what we are leveraging (igert,esci), who else is profiting
-                   % eg astro, science, cs, maybe math majors
-% results from nsf support  -- not sure where yet
-% \input{organization}  % will move it here later
+\section{Sample course materials from \astroml }
 
-% I copied out material from these and move it into the sections/files above
-%\input{plan}
-%\input{planMarina} 
 
-\input{planJake}  % not touched yet
-
-%\input{planAndy}
-
-\input{organization} % not touched yet
-
-\bibliographystyle{plain}
-\bibliography{proposal}
+%\bibliographystyle{plain}
+%\bibliography{proposal}
 \end{document} 
 
 
